@@ -1,3 +1,12 @@
+2010-05-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-progress-reporter-update): New defun.
+	(with-progress-reporter): Use it.
+	(tramp-process-one-action):
+	* tramp-gvfs.el (tramp-gvfs-handler-askquestion): Preserve current
+	message, in order to let progress reporter continue
+	afterwards.  (Bug#6257)
+
 2010-05-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-do-copy-or-rename-file)
